--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
     <!-- layanan kami -->
     <section class="py-5">
       <div class="container">
-        <div class="d-flex justify-content-between align-items-end">
-          <div>
+        <div class="row row-cols-1 d-flex justify-content-between align-items-end">
+          <div class="col-md-10">
             <span class="badge text-bg-secondary bg-opacity-50 rounded-1 py-2 px-3">What We Do</span>
             <h1 class="fw-bold">Layanan Kami</h1>
             <p class="text-muted mb-0">Bikin web keren atau sistem IoT yang auto-jalan? Kami siap bantuin dari awal sampai jadi!</p>
           </div>
-          <div>
-            <a href="/layanan/" class="btn btn-outline-dark">Selengkapnya</a>
+          <div class="col-md-2">
+            <a href="/layanan/" class="btn btn-outline-dark mt-3 mt-md-0">Selengkapnya</a>
           </div>
         </div>
         <div class="row row-cols-1 row-cols-md-2 g-4 mt-1">
@@ -277,13 +277,12 @@
     <!-- portofolio -->
     <section class="py-5 bg-light">
       <div class="container py-4">
-        <div class="d-flex justify-content-between align-items-end">
-          <div class="he">
-            <span class="badge text-bg-secondary bg-opacity-50 rounded-1 py-2 px-3">PORTOFOLIO</span>
-            <!-- <h1 class="fw-bold">Portofolio Kami</h1> -->
-            <h1 class="mb-0 col-8">Beberapa proyek kece yang udah kami kerjain. Web? IoT? Semua ada.</h1>
+        <div class="row align-items-end">
+          <div class="col-md-8">
+            <span class="badge text-bg-secondary bg-opacity-50 rounded-1 py-2 px-3 mb-2 d-inline-block">PORTOFOLIO</span>
+            <h1 class="mb-0">Beberapa proyek kece yang udah kami kerjain. Web? IoT? Semua ada.</h1>
           </div>
-          <div class="he">
+          <div class="col-md-4 text-md-end mt-3 mt-md-0">
             <a href="/portofolio/" class="btn btn-outline-info">Selengkapnya</a>
           </div>
         </div>
