--- a/index.html
+++ b/index.html
@@ -81,6 +81,45 @@
             <img src="assets/img/header.png" alt="" class="img-fluid object-fit-cover" />
           </div>
         </div>
+        <div class="border rounded p-5 mt-3">
+          <div class="row row-cols-2 row-cols-md-4 g-4">
+            <!-- Client -->
+            <div class="col d-flex align-items-center gap-3">
+              <i class="bi bi-emoji-smile text-primary fs-1"></i>
+              <div>
+                <h1 class="fw-bold mb-0">120+</h1>
+                <p class="mb-0 text-muted">Client Happy</p>
+              </div>
+            </div>
+
+            <!-- Project -->
+            <div class="col d-flex align-items-center gap-3">
+              <i class="bi bi-check-circle text-success fs-1"></i>
+              <div>
+                <h1 class="fw-bold mb-0">150+</h1>
+                <p class="mb-0 text-muted">Proyek Kelar</p>
+              </div>
+            </div>
+
+            <!-- Experience -->
+            <div class="col d-flex align-items-center gap-3">
+              <i class="bi bi-laptop text-warning fs-1"></i>
+              <div>
+                <h1 class="fw-bold mb-0">5+</h1>
+                <p class="mb-0 text-muted">Tahun Ngoding</p>
+              </div>
+            </div>
+
+            <!-- Tim -->
+            <div class="col d-flex align-items-center gap-3">
+              <i class="bi bi-people text-danger fs-1"></i>
+              <div>
+                <h1 class="fw-bold mb-0">10+</h1>
+                <p class="mb-0 text-muted">Orang di Tim</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
