--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
   </head>
   <body>
@@ -62,50 +62,221 @@
       </nav>
     </div>
 
-    <!-- profil singkat -->
-    <div class="py-5">
+    <section class="pt-5">
       <div class="container">
-        <div class="border rounded p-5 mt-3">
-          <div class="row row-cols-2 row-cols-md-4 g-4">
-            <!-- Client -->
-            <div class="col d-flex align-items-center gap-3">
-              <i class="bi bi-emoji-smile text-primary fs-1"></i>
-              <div>
-                <h1 class="fw-bold mb-0">120+</h1>
-                <p class="mb-0 text-muted">Client Happy</p>
+        <div class="text-center">
+          <span class="badge text-bg-secondary bg-opacity-50 rounded-1 py-2 px-3">PROFIL</span>
+          <h1 class="fw-semibold mb-3">Kami adalah tim kreatif digital asal <strong>Tasikmalaya</strong> yang bergerak di bidang <strong>pembuatan website</strong> dan
+            <strong>pengembangan solusi IoT</strong>.
+          </h1>
+          <div class="overflow-hidden" style="max-height: 30vh;"> 
+            <img src="../assets/img/profil.jpg" class="img-fluid rounded" alt="Example image" loading="lazy">
+          </div>
+        </div>
+      </div>
+    </section> 
+
+    <section class="py-5 bg-light">
+      <div class="container py-4">
+        <div class="row align-items-end">
+          <div class="col-md-8">
+            <span class="badge text-bg-secondary bg-opacity-50 rounded-1 py-2 px-3 mb-2 d-inline-block">PORTOFOLIO</span>
+            <h1 class="mb-0">Beberapa proyek kece yang udah kami kerjain. Web? IoT? Semua ada.</h1>
+          </div>
+          <div class="col-md-4 text-md-end mt-3 mt-md-0">
+            <a href="/portofolio/" class="btn btn-outline-info">Selengkapnya</a>
+          </div>
+        </div>
+
+        <div class="mt-3">
+          <div class="row">
+            <div class="col-md-4 mb-4 sticky-mobile-fix position-sticky" style="top: 6rem; height: fit-content;">
+              <div class="nav flex-column nav-pills gap-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <!-- semua project -->
+                <button
+                  class="nav-link p-0 border-0 active"
+                  id="v-pills-dev-tab"
+                  data-bs-toggle="pill"
+                  data-bs-target="#v-pills-dev"
+                  type="button"
+                  role="tab"
+                  aria-controls="v-pills-dev"
+                  aria-selected="false">
+                  <div class="card shadow-none">
+                    <div class="card-body d-flex align-items-center gap-3">
+                      <i class="bi bi-code-slash fs-3 text-danger"></i>
+                      <div>
+                        <h6 class="mb-0">Semua</h6>
+                      </div>
+                    </div>
+                  </div>
+                </button>
+                <!-- Website -->
+                <button
+                  class="nav-link p-0 border-0"
+                  id="v-pills-web-tab"
+                  data-bs-toggle="pill"
+                  data-bs-target="#v-pills-web"
+                  type="button"
+                  role="tab"
+                  aria-controls="v-pills-web"
+                  aria-selected="true">
+                  <div class="card shadow-none">
+                    <div class="card-body d-flex align-items-center gap-3">
+                      <i class="bi bi-window fs-3 text-primary"></i>
+                      <div>
+                        <h6 class="mb-0">Website Projects</h6>
+                      </div>
+                    </div>
+                  </div>
+                </button>
+
+                <!-- IoT -->
+                <button
+                  class="nav-link p-0 border-0"
+                  id="v-pills-iot-tab"
+                  data-bs-toggle="pill"
+                  data-bs-target="#v-pills-iot"
+                  type="button"
+                  role="tab"
+                  aria-controls="v-pills-iot"
+                  aria-selected="false">
+                  <div class="card shadow-none">
+                    <div class="card-body d-flex align-items-center gap-3">
+                      <i class="bi bi-cpu fs-3 text-success"></i>
+                      <div>
+                        <h6 class="mb-0">IoT Projects</h6>
+                      </div>
+                    </div>
+                  </div>
+                </button>
               </div>
             </div>
 
-            <!-- Project -->
-            <div class="col d-flex align-items-center gap-3">
-              <i class="bi bi-check-circle text-success fs-1"></i>
-              <div>
-                <h1 class="fw-bold mb-0">150+</h1>
-                <p class="mb-0 text-muted">Proyek Kelar</p>
-              </div>
-            </div>
+            <!-- Isi Konten -->
+            <div class="col-md-8 scrollable-mobile-fix" style="overflow-y: auto;">
+              <div class="tab-content" id="v-pills-tabContent">
+                <div class="tab-pane fade show active" id="v-pills-dev" role="tabpanel" aria-labelledby="v-pills-dev-tab" tabindex="0">
+                  <div class="card mb-3 border-0 shadow-none border-start border-3 border-primary">
+                    <div class="card-body p-4">
+                      <div class="row">
+                        <div class="col-auto">
+                          <h3 class="p-3 rounded fw-bold text-primary bg-primary-subtle d-inline-block">
+                            <i class="bi bi-cart3"></i>
+                          </h3>
+                        </div>
+                        <div class="col">
+                          <div class="d-flex justify-content-between">
+                            <p class="text-muted mb-0">Type : <strong>Website</strong></p>
+                            <i class="bi bi-heart"></i>
+                          </div>
+                          <h4 class="card-title mt-3">Sistem Informasi Stok dan Monitoring Barang (SIPMAP)</h4>
+                          <p class="card-text">12 Desember 2024 - 3 Januari 2025</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card-footer bg-primary bg-opacity-10 px-4">
+                      <div class="d-flex justify-content-between align-items-center">
+                        <p class="mb-0"><i class="bi bi-geo-alt"></i> Bone, Sulawesi Selatan.</p>
+                        <a href="/portofolio/" class="btn btn-light px-4 shadow-sm rounded-pill">Detail</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card mb-3 border-0 shadow-none border-start border-3 border-danger">
+                    <div class="card-body p-4">
+                      <div class="row">
+                        <div class="col-auto">
+                          <h3 class="p-3 rounded fw-bold text-danger bg-danger-subtle d-inline-block">
+                            <i class="bi bi-cart3"></i>
+                          </h3>
+                        </div>
+                        <div class="col">
+                          <div class="d-flex justify-content-between">
+                            <p class="text-muted mb-0">Type : <strong>Website</strong></p>
+                            <i class="bi bi-heart"></i>
+                          </div>
+                          <h4 class="card-title mt-3">Sistem Informasi Stok dan Monitoring Barang (SIPMAP)</h4>
+                          <p class="card-text">12 Desember 2024 - 3 Januari 2025</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card-footer bg-danger bg-opacity-10 px-4">
+                      <div class="d-flex justify-content-between align-items-center">
+                        <p class="mb-0"><i class="bi bi-geo-alt"></i> Bone, Sulawesi Selatan.</p>
+                        <a href="/portofolio/" class="btn btn-light px-4 shadow-sm rounded-pill">Detail</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card mb-3 border-0 shadow-none border-start border-3 border-success">
+                    <div class="card-body p-4">
+                      <div class="row">
+                        <div class="col-auto">
+                          <h3 class="p-3 rounded fw-bold text-success bg-success-subtle d-inline-block">
+                            <i class="bi bi-cart3"></i>
+                          </h3>
+                        </div>
+                        <div class="col">
+                          <div class="d-flex justify-content-between">
+                            <p class="text-muted mb-0">Type : <strong>Website</strong></p>
+                            <i class="bi bi-heart"></i>
+                          </div>
+                          <h4 class="card-title mt-3">Sistem Informasi Stok dan Monitoring Barang (SIPMAP)</h4>
+                          <p class="card-text">12 Desember 2024 - 3 Januari 2025</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card-footer bg-success bg-opacity-10 px-4">
+                      <div class="d-flex justify-content-between align-items-center">
+                        <p class="mb-0"><i class="bi bi-geo-alt"></i> Bone, Sulawesi Selatan.</p>
+                        <a href="/portofolio/" class="btn btn-light px-4 shadow-sm rounded-pill">Detail</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card mb-3 border-0 shadow-none border-start border-3 border-info">
+                    <div class="card-body p-4">
+                      <div class="row">
+                        <div class="col-auto">
+                          <h3 class="p-3 rounded fw-bold text-info bg-info-subtle d-inline-block">
+                            <i class="bi bi-cart3"></i>
+                          </h3>
+                        </div>
+                        <div class="col">
+                          <div class="d-flex justify-content-between">
+                            <p class="text-muted mb-0">Type : <strong>Website</strong></p>
+                            <i class="bi bi-heart"></i>
+                          </div>
+                          <h4 class="card-title mt-3">Sistem Informasi Stok dan Monitoring Barang (SIPMAP)</h4>
+                          <p class="card-text">12 Desember 2024 - 3 Januari 2025</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card-footer bg-info bg-opacity-10 px-4">
+                      <div class="d-flex justify-content-between align-items-center">
+                        <p class="mb-0"><i class="bi bi-geo-alt"></i> Bone, Sulawesi Selatan.</p>
+                        <a href="/portofolio/" class="btn btn-light px-4 shadow-sm rounded-pill">Detail</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
 
-            <!-- Experience -->
-            <div class="col d-flex align-items-center gap-3">
-              <i class="bi bi-laptop text-warning fs-1"></i>
-              <div>
-                <h1 class="fw-bold mb-0">5+</h1>
-                <p class="mb-0 text-muted">Tahun Ngoding</p>
-              </div>
-            </div>
+                <!-- Web -->
+                <div class="tab-pane fade" id="v-pills-web" role="tabpanel" aria-labelledby="v-pills-web-tab" tabindex="0">
+                  <h4>Website Projects</h4>
+                  <p>Web apps modern, dari landing page sampai e-commerce full fitur.</p>
+                  <!-- Tambahkan grid/konten di sini -->
+                </div>
 
-            <!-- Tim -->
-            <div class="col d-flex align-items-center gap-3">
-              <i class="bi bi-people text-danger fs-1"></i>
-              <div>
-                <h1 class="fw-bold mb-0">10+</h1>
-                <p class="mb-0 text-muted">Orang di Tim</p>
+                <!-- IoT -->
+                <div class="tab-pane fade" id="v-pills-iot" role="tabpanel" aria-labelledby="v-pills-iot-tab" tabindex="0">
+                  <h4>IoT Projects</h4>
+                  <p>Proyek berbasis sensor & otomatisasi, dengan dashboard real-time.</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- footer -->
     <section class="py-5 text-bg-dark">
