--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <h4>Nggak cuma tampil keren, tapi juga fungsional dan future-ready. Tech-savvy banget, no drama.</h4>
             <div class="mt-3">
               <a href="/kontak/" class="btn btn-primary btn-lg">Tanya Dulu Aja</a>
-              <a href="/portofolio/" class="btn btn-outline-primary btn-lg">Liat Porto</a>
+              <a href="/portofolio/" class="btn text-primary bg-primary-subtle rounded btn-lg">Liat Porto</a>
             </div>
           </div>
           <div class="col d-none d-md-block">
@@ -145,7 +145,7 @@
               Kami percaya: produk lokal bisa bersaing secara global — asal digarap dengan niat, desain yang kece, dan eksekusi yang solid. Let’s
               build something impactful bareng!
             </p>
-            <a href="/profil/" class="btn btn-primary">Profil Selengkapnya</a>
+            <a href="/profil/" class="btn text-primary bg-primary-subtle">Profil Selengkapnya</a>
           </div>
         </div>
       </div>
@@ -161,7 +161,7 @@
             <p class="text-muted mb-0">Bikin web keren atau sistem IoT yang auto-jalan? Kami siap bantuin dari awal sampai jadi!</p>
           </div>
           <div class="col-md-2">
-            <a href="/layanan/" class="btn btn-outline-dark mt-3 mt-md-0">Selengkapnya</a>
+            <a href="/layanan/" class="btn text-primary bg-primary-subtle mt-3 mt-md-0">Selengkapnya</a>
           </div>
         </div>
         <div class="row row-cols-1 row-cols-md-2 g-4 mt-1">
