--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -62,14 +62,14 @@
       </nav>
     </div>
 
-    <section class="pt-5">
+    <section class="py-5">
       <div class="container">
         <div class="text-center">
           <span class="badge text-bg-secondary bg-opacity-50 rounded-1 py-2 px-3">PROFIL</span>
           <h1 class="fw-semibold mb-3">Kami adalah tim kreatif digital asal <strong>Tasikmalaya</strong> yang bergerak di bidang <strong>pembuatan website</strong> dan
             <strong>pengembangan solusi IoT</strong>.
           </h1>
-          <div class="overflow-hidden" style="max-height: 30vh;"> 
+          <div class="ratio ratio-21x9">
             <img src="../assets/img/profil.jpg" class="img-fluid rounded" alt="Example image" loading="lazy">
           </div>
         </div>
@@ -78,16 +78,8 @@
 
     <section class="py-5 bg-light">
       <div class="container py-4">
-        <div class="row align-items-end">
-          <div class="col-md-8">
-            <span class="badge text-bg-secondary bg-opacity-50 rounded-1 py-2 px-3 mb-2 d-inline-block">PORTOFOLIO</span>
-            <h1 class="mb-0">Beberapa proyek kece yang udah kami kerjain. Web? IoT? Semua ada.</h1>
-          </div>
-          <div class="col-md-4 text-md-end mt-3 mt-md-0">
-            <a href="/portofolio/" class="btn btn-outline-info">Selengkapnya</a>
-          </div>
-        </div>
-
+        <span class="badge text-bg-secondary bg-opacity-50 rounded-1 py-2 px-3 mb-2 d-inline-block">PORTOFOLIO</span>
+        <h1 class="mb-0">Beberapa proyek kece yang udah kami kerjain. Web? IoT? Semua ada.</h1>
         <div class="mt-3">
           <div class="row">
             <div class="col-md-4 mb-4 sticky-mobile-fix position-sticky" style="top: 6rem; height: fit-content;">
