--- a/profil/index.html
+++ b/profil/index.html
@@ -141,7 +141,7 @@
 
     <!-- visi dan misi -->
     <section class="py-5 bg-light" id="visimisi">
-      <div class="container">
+      <div class="container py-4">
         <div class="row g-5">
           <!-- Visi -->
           <div class="col-md-6">
@@ -290,30 +290,42 @@
         <h2 class="fw-bold mt-2">Sedikit Angka, Banyak Cerita</h2>
         <p class="text-muted mb-4">Bukan pamer, cuma pengen kasih tau seberapa serius kita ngerjain semuanya 😎</p>
 
-        <div class="rounded p-4 border">
+        <div class="rounded p-5 border">
           <div class="row row-cols-2 row-cols-md-4 g-4">
             <!-- Client -->
-            <div class="col">
-              <h1 class="fw-bold text-primary mb-0">120+</h1>
-              <p class="mb-0 text-muted">Client Happy</p>
+            <div class="col d-flex align-items-center gap-3">
+              <i class="bi bi-emoji-smile text-primary fs-1"></i>
+              <div>
+                <h1 class="fw-bold mb-0">120+</h1>
+                <p class="mb-0 text-muted">Client Happy</p>
+              </div>
             </div>
 
             <!-- Project -->
-            <div class="col">
-              <h1 class="fw-bold text-success mb-0">150+</h1>
-              <p class="mb-0 text-muted">Proyek Kelar</p>
+            <div class="col d-flex align-items-center gap-3">
+              <i class="bi bi-check-circle text-success fs-1"></i>
+              <div>
+                <h1 class="fw-bold mb-0">150+</h1>
+                <p class="mb-0 text-muted">Proyek Kelar</p>
+              </div>
             </div>
 
             <!-- Experience -->
-            <div class="col">
-              <h1 class="fw-bold text-warning mb-0">5+</h1>
-              <p class="mb-0 text-muted">Tahun Ngoding</p>
+            <div class="col d-flex align-items-center gap-3">
+              <i class="bi bi-laptop text-warning fs-1"></i>
+              <div>
+                <h1 class="fw-bold mb-0">5+</h1>
+                <p class="mb-0 text-muted">Tahun Ngoding</p>
+              </div>
             </div>
 
             <!-- Tim -->
-            <div class="col">
-              <h1 class="fw-bold text-danger mb-0">10+</h1>
-              <p class="mb-0 text-muted">Orang di Tim</p>
+            <div class="col d-flex align-items-center gap-3">
+              <i class="bi bi-people text-danger fs-1"></i>
+              <div>
+                <h1 class="fw-bold mb-0">10+</h1>
+                <p class="mb-0 text-muted">Orang di Tim</p>
+              </div>
             </div>
           </div>
         </div>
